# kgraph

./: .dockerignore  .gitignore  .pylintrc  CLAUDE.md  CONCURRENCY.md  DEDUP_REMAINING_TODO.md  Dockerfile.jupyter  IMPLEMENTATION_PLAN.md  JATS_PARSER_NOTES.md  LAMBDA_LABS.md  MCP_INGESTION.md  MEDLIT_SCHEMA_SPEC.md  NEXT_STEPS.md  OBSOLETE_FROM_MED_LIT_SCHEMA.md  PLAN.md  PLAN1.md  PLAN10.md  PLAN11.md  PLAN2.md  PLAN3.md  PLAN4.md  PLAN5.md  PLAN6.md  PLAN7.md  PLAN8.md  PLAN8a.md  PLAN8b.md  PLAN9.md  README.md  RETHINK_INGESTION.md  SIMPLIFY_PROMOTION.md  STATUS_20260212.md  TODO.md  TODO1.md  TODO2.md  VIBES.md  Z  bfsql.md  blather.txt  canonical_id_cache.json  (+14 more)
.github/: copilot-instructions.md
bundle/: entities.jsonl  evidence.jsonl  manifest.json  mentions.jsonl  relationships.jsonl
chainlit/: .env.example  Dockerfile  app.py  examples.yaml  notes.md
docs/: INTEGRATE_IDENTITY_SERVER_BATCH.md  RELATIONSHIP_TRACING.md  adapting-to-your-domain.md  api.md  architecture.md  bundle.md  canonical_ids.md  determinism.md  domains.md  enrichment.md  graph_visualization.md  index.md  pipeline.md  storage.md
examples/: simple_ingestion.py
extracted/: paper_PMC10528651.json  paper_PMC10667925.json  paper_PMC10759991.json  paper_PMC11128938.json  paper_PMC11167878.json  paper_PMC11219579.json  paper_PMC11246848.json  paper_PMC11402677.json  paper_PMC11548364.json  paper_PMC11560769.json  paper_PMC11685751.json  paper_PMC11707539.json  paper_PMC11729065.json  paper_PMC11742904.json  paper_PMC11779774.json  paper_PMC11795198.json  paper_PMC11882683.json  paper_PMC11898320.json  paper_PMC12035109.json  paper_PMC12055610.json  paper_PMC12187266.json  paper_PMC12489329.json  paper_PMC12597749.json  (+149 more)
kgbundle/: __init__.py  models.py  pyproject.toml
kgbundle/kgbundle/: __init__.py  models.py
kgbundle/tests/: __init__.py  test_models.py
kgschema/: __init__.py  domain.py  entity.py  identity.py  promotion.py  pyproject.toml  spec.py  storage.py
kgschema/kgschema/: __init__.py  canonical_id.py  domain.py  entity.py  identity.py  relationship.py  spec.py
kgserver/: .cursor-mcp.json.example  .gitignore  .gitmodules  .pylintrc  DOCKER_COMPOSE_GUIDE.md  DOCKER_SETUP.md  Dockerfile  LOCAL_DEV.md  MCP_CLIENT_SETUP.md  MCP_GQL_WRAPPER.md  README.md  docker-compose.yml  index.md  lint.sh  mcp.json  mcp_main.py  mkdocs.yml  nginx-kgraph.conf  nginx-mcp.conf  pyproject.toml
kgserver/chainlit/: app.py  docker-compose.chat.yml  examples.yaml  requirements.txt
kgserver/chainlit/.chainlit/: config.toml
kgserver/docs/: architecture.md
kgserver/mcp_server/: __init__.py  ingest_worker.py  server.py
kgserver/query/: __init__.py  bundle_loader.py  graph_traversal.py  graphql_examples.py  graphql_examples.yml  graphql_schema.py  server.py  storage_factory.py
kgserver/query/routers/: graph_api.py  graphiql_custom.py  subgraph_api.py
kgserver/query/static/: graph-viz.css  graph-viz.js  index.html
kgserver/storage/: README.md  __init__.py  interfaces.py
kgserver/storage/backends/: identity.py  postgres.py  sqlite.py
kgserver/storage/models/: __init__.py  bundle_evidence.py  entity.py  ingest_job.py  mention.py  relationship.py
kgserver/tests/: conftest.py  t_est_graph_viz_theme.py  test_bfs_subgraph.py  test_bfs_subgraph_mcp.py  test_bundle_loader.py  test_find_entities_within_hops.py  test_graph_api.py  test_graph_viz_theme.py  test_graphql_schema.py  test_ingest_worker.py  test_mcp_graphql_tool.py  test_rest_api.py  test_storage_provenance.py  test_subgraph_api.py
(+295 files in other folders)
