[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kgschema"]

[project]
name = "kgschema"
version = "0.1.0"
description = "Knowledge graph schema: Pydantic models and ABC interfaces for entities, relationships, and storage"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
]

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200
